# coaching_dashboard

./: .gitignore  pyproject.toml
coaching_dashboard/dashboard/: app.py
coaching_dashboard/etl/: deployments.py
coaching_dashboard/etl/constants/: paths.py
coaching_dashboard/etl/flows/: __init__.py  main_fit_file_ingestion.py
coaching_dashboard/etl/tasks/: process_fit_file.py
