[tool.poetry]
name = "coaching-dashboard"
version = "0.1.0"
description = ""
authors = ["Pierre-Amaury Laforcade <pa.laforcade@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
streamlit = "^1.46.0"
polars = "^1.31.0"
prefect = "^3.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
